Added new entities, controllers, services and repositories. Removed deprecated method calls. Added a new method on DateTimeUtils.